# LibYaz0

./: CMakeLists.txt  README.md
include/: szsCompressor  szsDecode.h
src/: main.cpp  szsCompressor  szsDecode.cpp
